Fixed problem with last remove repeatable not showing

--- a/includes/css/edd-admin.css
+++ b/includes/css/edd-admin.css
@@ -33,7 +33,6 @@ tr.status-refunded td { background: #cecece; border-top-color: #ccc; }
 textarea#edd_product_notes { width: 100%; height: 4em; margin: 0; }
 
 .edd_add_repeatable { display: inline-block; }
-.edd_add_blank .edd_remove_repeatable { display: none; }
 #downloadinformation #postcustomstuff table input, #downloadinformation #postcustomstuff table select, #downloadinformation #postcustomstuff table textarea { margin: 4px 0; width: 100%; }
 #downloadinformation #postcustomstuff table .submit input { width: auto; }
 .edd_upload_file { position: absolute; top: 9px; right: 9px; padding: 3px 8px 2px; display: block; background: #fff; }
